--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="root-content" style="padding-top: 10px; width: 65%;">
       <!-- <h1 class="section-name">Generating <font style="color: red;">Multi-View and Controllable</font> Videos for Autonoumous Driving</h1>
    -->
-      <video style="margin:auto; right: 0; left: 0; width: 80%; display: block;" controls autoplay muted loop poster="assests/preview.jpeg">
+      <video style="margin:auto; right: 0; left: 0; width: 80%; display: block;" controls autoplay muted loop">
         <source src="assests/demo.mp4" type="video/mp4">
         Your browser does not support the video tag.
       </video>
@@ -121,7 +121,8 @@ predicts masked tokens, performing action-level and token-level remasking based 
             outperforms previous methods on both SimplerEnv and CALVIN benchmark.</p>
         <h1 class="section-name">&#128526;&nbsp;&nbsp; Generalization Ability &nbsp;&nbsp;&#128526;</h1>
         <img src="assests/unseen.jpeg" style="margin:auto; right: 0; left: 0; width: 60%; display: inline;">
-        <p class="section-content-text" style="padding-bottom: 20px;"><strong>Performance on unseen tasks. </strong></p>      </div>
+        <p class="section-content-text" style="padding-bottom: 20px;"><strong>Performance on unseen tasks. </strong>
+        LLaDA-VLA exhibits strong generalization ability in real-robot OOD tasks, handling unseen objects, containers, and distractors, and achieving notably higher success rates than π₀.</p>      </div>
 </div>
 
 
