--- a/index.html
+++ b/index.html
@@ -255,7 +255,8 @@
                     </a>
                 </span>
                 <span class="link-button">
-                    <a class="link-button-content" href="https://github.com/wenyuqing/LLaDA-VLA" target="_blank">
+                    <!-- <a class="link-button-content" href="https://github.com/wenyuqing/LLaDA-VLA" target="_blank"> -->
+                    <a class="link-button-content" target="_blank">
                         <i class="fab fa-github"></i>
                         Github Repo
                     </a>
