--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <!-- 演示视频区域 - 视频居中 -->
         <div class="content-section">
             <div class="media-container">
-                <video controls autoplay muted loop poster="" preload="metadata" style="max-width: 80%;">
+                <video controls autoplay muted loop poster="assests/poster.png" preload="metadata" style="max-width: 80%;">
                     <source src="assests/demo.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
