--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <div class="media-container">
                 <img src="assests/real.jpeg" alt="Real-World Performance" style="max-width: 100%;">
                 <p class="media-caption">
-                    <strong>Performance under varying data scales.</strong> It can be observed that LLaDA-VLA consistently outperforms previous methods on both SimplerEnv and CALVIN benchmark.
+                    <strong>Performance under varying data scales.</strong> It can be observed that LLaDA-VLA consistently outperforms previous methods on both SimplerEnv and CALVIN benchmark. On real-robot experiments, LLaDA-VLA achieves better performance than both CogACT and π₀.
                 </p>
             </div>
 
